--- a/StableDiffusion_Forge_AutoSave_zasuko's_note_20250225.ipynb
+++ b/StableDiffusion_Forge_AutoSave_zasuko's_note_20250225.ipynb
@@ -122,7 +122,8 @@
         "    \"https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\",\n",
         "    \"https://github.com/continue-revolution/sd-webui-segment-anything.git\",\n",
         "    \"https://github.com/blue-pen5805/sdweb-easy-prompt-selector.git\",\n",
-        "    \"https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git\",\n",
+        "    \"https://github.com/KohakuBlueleaf/z-tipo-extension.git\",\n",
+        "    \"https://github.com/zixaphir/Stable-Diffusion-Webui-Civitai-Helper.git\",\n",
         "]\n",
         "\n",
         "# 拡張機能のクローン処理\n",
@@ -192,6 +193,7 @@
         "  --embeddings-dir \"/content/drive/MyDrive/StableDiffusion/embeddings\" \\\n",
         "  --lora-dir \"/content/drive/MyDrive/StableDiffusion/lora\" \\\n",
         "  --vae-dir \"/content/drive/MyDrive/StableDiffusion/vae\" \\\n",
+        "  --extensions-dir \"/content/drive/MyDrive/StableDiffusion/extensions\" \\\n",
         "  --controlnet-dir \"/content/drive/MyDrive/StableDiffusion/controlnet\""
       ]
     }
