--- a/StableDiffusion_Forge_AutoSave_zasuko's_note_20250225.ipynb
+++ b/StableDiffusion_Forge_AutoSave_zasuko's_note_20250225.ipynb
@@ -6,31 +6,24 @@
         "id": "2d6jj_Vmg9_p"
       },
       "source": [
-        "★事前準備★\n",
+        "## 📋 事前准备\n",
         "\n",
-        "ご自分の「Googleドライブ」の「MyDrive」に 以下のフォルダ構成と\n",
+        "请在您的Google Drive的「MyDrive」中创建以下文件夹结构，\n",
+        "并根据需要放入您想在Stable Diffusion WebUI (Forge) 中使用的数据：\n",
         "\n",
-        "任意でGoogleColab上の「Stable-Diffusion_WEB-UI（Forge）」で使用したいデータを格納してください。\n",
+        "```\n",
+        "MyDrive/\n",
+        "└── StableDiffusion/\n",
+        "    ├── checkpoints/   # 放置AI模型文件\n",
+        "    ├── controlnet/    # 放置ControlNet模型\n",
+        "    ├── embeddings/    # 放置EasyNegative等嵌入文件\n",
+        "    ├── lora/          # 放置LoRA模型文件\n",
+        "    ├── vae/           # 放置VAE模型文件\n",
+        "    ├── outputs/       # 生成图片的保存位置（只需创建文件夹）\n",
+        "    └── extensions/    # 扩展插件保存位置（会自动创建）\n",
+        "```\n",
         "\n",
-        "MyDrive\n",
-        "\n",
-        "└StableDiffusion\n",
-        "\n",
-        " 　└checkpoints　※使用したいモデルデータを格納\n",
-        "\n",
-        " 　└controlnet　※ツール用モデルを格納\n",
-        "\n",
-        " 　└embeddings　※EasyNegativeなどを格納\n",
-        "\n",
-        " 　└lora　※使用したいLoRAデータを格納\n",
-        "\n",
-        " 　└VAE　※使用したいVAEデータを格納\n",
-        "\n",
-        " 　└outputs　※生成データのコピー用受け皿フォルダ（フォルダのみでOK）\n",
-        "\n",
-        " ※A1111で使っているStyleを流用したい場合は、\n",
-        "\n",
-        " マイドライブの「StableDiffusion」フォルダに「styles.csv」のファイルを保存しておいてください。"
+        "💡 **提示**：如果您想从A1111迁移样式设置，请将 `styles.csv` 文件保存到 `MyDrive/StableDiffusion/` 文件夹中。"
       ]
     },
     {
@@ -39,30 +32,30 @@
         "id": "Z7-3iE4Ta8v0"
       },
       "source": [
-        "★このノートブックの使い方★\n",
+        "## 🚀 使用方法\n",
         "\n",
-        "～～～～～～～～～～～～～～～～～～～～～～～～～～～～～～\n",
+        "### 步骤说明：\n",
         "\n",
-        "①まずメニュー項目の「ランタイム」から\n",
-        " → ランタイムの変更（いずれかのGPUタイプを選択）\n",
+        "1. **设置GPU**\n",
+        "   - 点击菜单栏的「运行时」→「更改运行时类型」\n",
+        "   - 选择GPU类型（T4、V100、A100等）\n",
         "\n",
-        "②【01】の実行ボタン（▶）を押す、\n",
+        "2. **执行代码**\n",
+        "   - 按顺序点击每个代码单元格的运行按钮（▶）\n",
+        "   - 等待左侧出现绿色勾号（✓）后再运行下一个\n",
+        "   - 或者直接选择「运行时」→「全部运行」\n",
         "\n",
-        "（▶）の左に✅が付いたら次の（▶）を順番に押していく\n",
+        "3. **访问WebUI**\n",
+        "   - 在【步骤3】执行完成后，会显示类似 `https://********.gradio.live` 的链接\n",
+        "   - 点击该链接即可打开Stable Diffusion WebUI\n",
         "\n",
-        "※または「ランタイム」から「すべてのセルを実行」を実行する\n",
+        "4. **停止WebUI**\n",
+        "   - 点击【步骤3】的停止按钮（◼）来停止WebUI\n",
         "\n",
-        "③【03】の処理が進み、 https://************.gradio.live\n",
-        "と表示されたら、そのURLをクリック\n",
+        "5. **重新启动**\n",
+        "   - 再次运行【步骤3】即可重新启动WebUI\n",
         "\n",
-        "④WEB-UIを停止するときは【03】の（▶）を押して処理をクルクルを停止\n",
-        "\n",
-        "⑤再度WEB-UIを使用する際は、【03】の（▶）を押し③と同様\n",
-        "\n",
-        "～～～～～～～～～～～～～～～～～～～～～～～～～～～～～～\n",
-        "\n",
-        "\n",
-        "以下、「StableDiffusion_WebUI Forge環境」の起動手順です。"
+        "---"
       ]
     },
     {
@@ -71,13 +64,14 @@
         "id": "xaBMLZ3T6xDU"
       },
       "source": [
-        "👇【01】Googleドライブのデータをこのノートブックへマウント（接続）\n",
+        "## 【步骤1】连接Google Drive\n",
         "\n",
-        "※Googleドライブにある、checkpoint、LoRA、VAE、Embedding、ControlNet用のツールモデル等を参照できるようにする\n",
+        "将您的Google Drive挂载到Colab环境，以便访问存储在Drive中的模型文件。\n",
         "\n",
-        "↓の（▶）を押し、出現するポップアップウィンドウから\n",
-        "\n",
-        "　 Googleドライブに接続 → 「アカウントの選択」 → 「アクセスを許可」"
+        "**操作说明**：\n",
+        "1. 点击下方的运行按钮（▶）\n",
+        "2. 在弹出的窗口中选择「连接到Google Drive」\n",
+        "3. 选择您的Google账号并授权访问"
       ]
     },
     {
@@ -88,8 +82,13 @@
       },
       "outputs": [],
       "source": [
+        "# 导入Google Colab的Drive模块\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "\n",
+        "# 挂载Google Drive到/content/drive路径\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "print(\"✅ Google Drive连接成功！\")"
       ]
     },
     {
@@ -98,7 +97,12 @@
         "id": "n5imcv6kBQqY"
       },
       "source": [
-        "👇【02】WEB-UIと各種_拡張機能のクローン（起動前にあらかじめ導入）※お好みで増減可能"
+        "## 【步骤2】安装Stable Diffusion WebUI Forge和扩展\n",
+        "\n",
+        "这一步将：\n",
+        "1. 下载并安装Stable Diffusion WebUI Forge\n",
+        "2. 让您选择要安装的扩展插件\n",
+        "3. 自动处理扩展的安装和更新"
       ]
     },
     {
@@ -109,28 +113,144 @@
       },
       "outputs": [],
       "source": [
-        "# Stable Diffusion Web-UI Forge のクローン（インストール）\n",
+        "import os\n",
+        "import subprocess\n",
+        "\n",
+        "# 1. 克隆Stable Diffusion WebUI Forge\n",
+        "print(\"📥 正在下载Stable Diffusion WebUI Forge...\")\n",
         "!git clone https://github.com/lllyasviel/stable-diffusion-webui-forge.git\n",
         "%cd /content/stable-diffusion-webui-forge\n",
+        "print(\"✅ WebUI Forge下载完成！\\n\")\n",
         "\n",
-        "# 拡張機能リポジトリのURLリスト\n",
-        "extensions = [\n",
-        "    \"https://github.com/Bing-su/adetailer.git\",\n",
-        "    \"https://github.com/thomasasfk/sd-webui-aspect-ratio-helper.git\",\n",
-        "    \"https://github.com/Physton/sd-webui-prompt-all-in-one.git\",\n",
-        "    \"https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\",\n",
-        "    \"https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\",\n",
-        "    \"https://github.com/KohakuBlueleaf/z-tipo-extension.git\",\n",
-        "    \"https://github.com/lobehub/sd-webui-lobe-theme.git\",\n",
-        "    \"https://github.com/Gourieff/sd-webui-reactor-sfw.git\",\n",
-        "    \"https://github.com/zixaphir/Stable-Diffusion-Webui-Civitai-Helper.git\",\n",
-        "]\n",
+        "# 2. 设置扩展文件夹路径\n",
+        "drive_extensions_path = \"/content/drive/MyDrive/StableDiffusion/extensions\"\n",
         "\n",
-        "# 拡張機能のクローン処理\n",
-        "%cd /content/stable-diffusion-webui-forge/extensions\n",
-        "for ext in extensions:\n",
-        "    !git clone {ext}\n",
-        "%cd /content/stable-diffusion-webui-forge"
+        "# 创建extensions文件夹（如果不存在）\n",
+        "if not os.path.exists(drive_extensions_path):\n",
+        "    os.makedirs(drive_extensions_path)\n",
+        "    print(\"📁 已创建extensions文件夹\")\n",
+        "\n",
+        "# 3. 创建符号链接，将Google Drive的extensions文件夹链接到WebUI\n",
+        "!rm -rf /content/stable-diffusion-webui-forge/extensions\n",
+        "!ln -s /content/drive/MyDrive/StableDiffusion/extensions /content/stable-diffusion-webui-forge/extensions\n",
+        "print(\"🔗 已链接Google Drive的extensions文件夹\\n\")\n",
+        "\n",
+        "# 4. 扩展安装界面\n",
+        "print(\"=\"*60)\n",
+        "print(\"📦 扩展安装器\")\n",
+        "print(\"=\"*60)\n",
+        "print(\"请输入要安装的扩展URL（每行一个），输入完成后按Enter两次：\")\n",
+        "print(\"示例: https://github.com/Bing-su/adetailer.git\")\n",
+        "print(\"\\n如果不输入任何内容并直接按Enter两次，将询问是否使用默认扩展列表\")\n",
+        "print(\"=\"*60)\n",
+        "\n",
+        "# 5. 收集用户输入的扩展URL\n",
+        "extensions = []\n",
+        "while True:\n",
+        "    line = input()\n",
+        "    if line:\n",
+        "        extensions.append(line.strip())\n",
+        "    else:\n",
+        "        break\n",
+        "\n",
+        "# 6. 如果用户没有输入，询问是否使用默认列表\n",
+        "if not extensions:\n",
+        "    use_default = input(\"\\n未输入任何扩展。是否使用默认扩展列表？(y/n): \")\n",
+        "    if use_default.lower() == 'y':\n",
+        "        extensions = [\n",
+        "            \"https://github.com/Bing-su/adetailer.git\",                            # After Detailer - 自动检测和修复人脸、手部\n",
+        "            \"https://github.com/thomasasfk/sd-webui-aspect-ratio-helper.git\",      # 宽高比助手 - 快速设置图片比例\n",
+        "            \"https://github.com/Physton/sd-webui-prompt-all-in-one.git\",          # 提示词全能工具 - 翻译、管理提示词\n",
+        "            \"https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\", # 终极放大 - 智能放大图片\n",
+        "            \"https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\",      # 标签自动补全 - 输入提示词时自动提示\n",
+        "            \"https://github.com/KohakuBlueleaf/z-tipo-extension.git\",             # Z-Tipo - 提示词增强工具\n",
+        "            \"https://github.com/lobehub/sd-webui-lobe-theme.git\",                 # Lobe主题 - 美化界面\n",
+        "            \"https://github.com/Gourieff/sd-webui-reactor-sfw.git\",               # ReActor - 人脸替换（安全版）\n",
+        "            \"https://github.com/zixaphir/Stable-Diffusion-Webui-Civitai-Helper.git\", # Civitai助手 - 模型下载和管理\n",
+        "        ]\n",
+        "        print(f\"\\n将安装 {len(extensions)} 个默认扩展\")\n",
+        "\n",
+        "# 7. 询问是否更新已存在的扩展\n",
+        "if extensions:\n",
+        "    update_existing = input(\"\\n是否更新已存在的扩展？(y/n，默认y): \")\n",
+        "    update_existing = update_existing.lower() != 'n'\n",
+        "    \n",
+        "    # 8. 开始处理扩展\n",
+        "    print(f\"\\n🚀 准备处理 {len(extensions)} 个扩展...\")\n",
+        "    print(\"=\"*60)\n",
+        "    \n",
+        "    # 切换到扩展目录\n",
+        "    %cd {drive_extensions_path}\n",
+        "    \n",
+        "    # 统计变量\n",
+        "    installed = 0\n",
+        "    updated = 0\n",
+        "    skipped = 0\n",
+        "    failed = 0\n",
+        "    \n",
+        "    # 9. 逐个处理扩展\n",
+        "    for i, ext in enumerate(extensions, 1):\n",
+        "        # 从URL提取扩展名称\n",
+        "        ext_name = ext.split('/')[-1].replace('.git', '')\n",
+        "        print(f\"\\n[{i}/{len(extensions)}] 处理: {ext_name}\")\n",
+        "        \n",
+        "        # 检查扩展是否已存在\n",
+        "        if os.path.exists(ext_name):\n",
+        "            if update_existing:\n",
+        "                print(f\"  📍 扩展已存在，正在检查更新...\")\n",
+        "                %cd {ext_name}\n",
+        "                \n",
+        "                # 保存本地修改（如果有）\n",
+        "                !git stash > /dev/null 2>&1\n",
+        "                \n",
+        "                # 拉取最新代码\n",
+        "                result = !git pull\n",
+        "                \n",
+        "                if any('Already up to date' in line for line in result):\n",
+        "                    print(f\"  ✅ 已是最新版本\")\n",
+        "                    skipped += 1\n",
+        "                else:\n",
+        "                    print(f\"  ✅ 更新成功\")\n",
+        "                    updated += 1\n",
+        "                \n",
+        "                %cd ..\n",
+        "            else:\n",
+        "                print(f\"  ⏭️  已存在，跳过\")\n",
+        "                skipped += 1\n",
+        "        else:\n",
+        "            # 安装新扩展\n",
+        "            print(f\"  📥 正在安装...\")\n",
+        "            result = !git clone {ext} 2>&1\n",
+        "            \n",
+        "            if os.path.exists(ext_name):\n",
+        "                print(f\"  ✅ 安装成功\")\n",
+        "                installed += 1\n",
+        "            else:\n",
+        "                print(f\"  ❌ 安装失败\")\n",
+        "                failed += 1\n",
+        "    \n",
+        "    # 10. 返回WebUI目录\n",
+        "    %cd /content/stable-diffusion-webui-forge\n",
+        "    \n",
+        "    # 11. 显示处理结果统计\n",
+        "    print(\"\\n\" + \"=\"*60)\n",
+        "    print(\"📊 处理完成！统计结果：\")\n",
+        "    print(f\"  ✅ 新安装: {installed} 个\")\n",
+        "    print(f\"  🔄 已更新: {updated} 个\")\n",
+        "    print(f\"  ⏭️  已跳过: {skipped} 个\")\n",
+        "    if failed > 0:\n",
+        "        print(f\"  ❌ 失败: {failed} 个\")\n",
+        "    print(\"=\"*60)\n",
+        "    \n",
+        "    # 12. 显示当前已安装的所有扩展\n",
+        "    installed_exts = os.listdir(drive_extensions_path)\n",
+        "    print(f\"\\n📦 当前已安装的扩展 (共{len(installed_exts)}个):\")\n",
+        "    for ext in sorted(installed_exts):\n",
+        "        print(f\"  • {ext}\")\n",
+        "else:\n",
+        "    print(\"\\n未选择安装任何扩展。\")\n",
+        "\n",
+        "print(\"\\n✨ 扩展配置完成！\")"
       ]
     },
     {
@@ -139,22 +259,18 @@
         "id": "3w5vN2jGZOcq"
       },
       "source": [
-        "👇【03】WEB-UIの起動（各種大容量データはGoogleドライブを参照する設定）\n",
+        "## 【步骤3】启动Stable Diffusion WebUI\n",
         "\n",
-        " ※生成した画像は自動的に/content/drive/MyDrive/StableDiffusion/outputs へ保存されます\n",
+        "**功能说明**：\n",
+        "- 生成的图片会自动保存到 `/content/drive/MyDrive/StableDiffusion/outputs`\n",
+        "- 模型文件从Google Drive读取，避免重复下载\n",
+        "- 支持自定义启动参数\n",
         "\n",
-        " ※起動オプション追記もお好みで可能です\n",
-        "\n",
-        "★ ↓の（▶）で WEB-UIの「起動」「停止」「再起動」を操作します。\n",
-        "\n"
+        "**操作说明**：\n",
+        "- 点击运行按钮（▶）启动WebUI\n",
+        "- 点击停止按钮（◼）停止WebUI\n",
+        "- 再次点击运行按钮（▶）重新启动"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "o8EfdoCtmC3d"
-      }
     },
     {
       "cell_type": "code",
@@ -164,36 +280,74 @@
       },
       "outputs": [],
       "source": [
-        "# 出力ディレクトリを設定するスクリプトを作成\n",
+        "import os\n",
+        "\n",
+        "# 1. 创建输出目录设置脚本\n",
+        "# 这个脚本会在WebUI启动时自动运行，设置图片保存路径到Google Drive\n",
         "script_content = \"\"\"\n",
         "import os\n",
         "from modules import shared\n",
         "\n",
-        "# Google Driveの出力ディレクトリを設定\n",
+        "# 设置各种输出的保存路径到Google Drive\n",
         "shared.opts.data['outdir_txt2img_samples'] = '/content/drive/MyDrive/StableDiffusion/outputs/txt2img-images'\n",
         "shared.opts.data['outdir_txt2img_grids'] = '/content/drive/MyDrive/StableDiffusion/outputs/txt2img-grids'\n",
         "shared.opts.data['outdir_img2img_samples'] = '/content/drive/MyDrive/StableDiffusion/outputs/img2img-images'\n",
         "shared.opts.data['outdir_img2img_grids'] = '/content/drive/MyDrive/StableDiffusion/outputs/img2img-grids'\n",
         "shared.opts.data['outdir_extras_images'] = '/content/drive/MyDrive/StableDiffusion/outputs/extras-images'\n",
         "\n",
-        "print(\"出力ディレクトリの設定が完了しました。\")\n",
+        "print(\"✅ 输出目录已设置到Google Drive\")\n",
         "\"\"\"\n",
-        "# スクリプトを保存\n",
+        "\n",
+        "# 2. 保存脚本到WebUI的scripts文件夹\n",
         "script_path = \"/content/stable-diffusion-webui-forge/scripts/set_output_dir.py\"\n",
         "with open(script_path, \"w\") as f:\n",
         "    f.write(script_content)\n",
+        "print(\"📝 输出目录设置脚本已创建\")\n",
         "\n",
-        "#style.csvファイルコピー ※MyDrive/StableDiffusionに保存したファイルをコピーして、登録済みのStyleをForgeで使用可能にします\n",
-        "!cp \"/content/drive/MyDrive/StableDiffusion/styles.csv\" \"/content/stable-diffusion-webui-forge\"\n",
+        "# 3. 复制styles.csv文件（如果存在）\n",
+        "# 这允许您从A1111迁移已保存的样式设置\n",
+        "styles_source = \"/content/drive/MyDrive/StableDiffusion/styles.csv\"\n",
+        "styles_dest = \"/content/stable-diffusion-webui-forge/styles.csv\"\n",
         "\n",
-        "# 設定スクリプトの実行とWEB-UIの起動\n",
+        "if os.path.exists(styles_source):\n",
+        "    !cp \"{styles_source}\" \"{styles_dest}\"\n",
+        "    print(\"📋 已复制styles.csv文件\")\n",
+        "else:\n",
+        "    print(\"ℹ️ 未找到styles.csv文件，跳过\")\n",
+        "\n",
+        "# 4. 执行输出目录设置脚本\n",
+        "print(\"\\n🔧 正在配置输出目录...\")\n",
         "!python /content/stable-diffusion-webui-forge/scripts/set_output_dir.py\n",
+        "\n",
+        "# 5. 启动WebUI\n",
+        "print(\"\\n🚀 正在启动Stable Diffusion WebUI Forge...\")\n",
+        "print(\"=\"*60)\n",
+        "print(\"请等待出现访问链接...\")\n",
+        "print(\"=\"*60 + \"\\n\")\n",
+        "\n",
+        "# 启动命令及参数说明：\n",
+        "# --share: 创建公共链接，可以从任何地方访问\n",
+        "# --no-half-vae: 禁用VAE半精度，提高稳定性\n",
+        "# --disable-nan-check: 禁用NaN检查，提高性能\n",
+        "# --ckpt-dir: 指定模型文件目录\n",
+        "# --embeddings-dir: 指定嵌入文件目录\n",
+        "# --lora-dir: 指定LoRA文件目录\n",
+        "# --vae-dir: 指定VAE文件目录\n",
+        "# --controlnet-dir: 指定ControlNet模型目录\n",
+        "\n",
         "!python launch.py --share --no-half-vae --disable-nan-check \\\n",
         "  --ckpt-dir \"/content/drive/MyDrive/StableDiffusion/checkpoints\" \\\n",
         "  --embeddings-dir \"/content/drive/MyDrive/StableDiffusion/embeddings\" \\\n",
         "  --lora-dir \"/content/drive/MyDrive/StableDiffusion/lora\" \\\n",
         "  --vae-dir \"/content/drive/MyDrive/StableDiffusion/vae\" \\\n",
-        "  --controlnet-dir \"/content/drive/MyDrive/StableDiffusion/controlnet\""
+        "  --controlnet-dir \"/content/drive/MyDrive/StableDiffusion/controlnet\"\n",
+        "\n",
+        "# 注意：您可以根据需要添加其他启动参数，例如：\n",
+        "# --xformers: 启用xformers内存优化（如果可用）\n",
+        "# --medvram: 中等VRAM优化（6-8GB显存）\n",
+        "# --lowvram: 低VRAM优化（4-6GB显存）\n",
+        "# --theme dark: 使用深色主题\n",
+        "# --gradio-auth username:password: 设置访问密码"
       ]
     }
   ],
